--- a/index.html
+++ b/index.html
@@ -231,25 +231,25 @@
                         </picture>
                         <figcaption>
                             <h1>Gonzalo Cabezas Núñez</h1>
-                            <h2>Desarrollador Frontend en transición a Fullstack</h2>
-                            <p>Me obsesiona el código limpio y funcional. Me formo a diario, tanto en academias como por libre, porque el conocimiento no se acaba cuando suena el timbre. Me gusta romper cosas para entenderlas (y arreglarlas mejor), por eso el Red Team me llama fuerte. No sigo el camino estándar; prefiero trazar el mío con teclado y café. Busco proyectos donde pueda aprender, aportar y dejar huella, sin postureos ni promesas vacías. Si algo no lo sé, lo investigo. Y si algo me motiva, no paro hasta hacerlo bien.</p>
+                            <h2>Frontend Developer transitioning to Fullstack</h2>
+                            <p>I’m obsessed with clean, functional code. I train every day—both through formal courses and self-learning—because learning doesn’t stop when the bell rings. I like breaking things to understand (and fix) them better, which is why Red Teaming strongly appeals to me. I don’t follow the standard path; I prefer carving my own with a keyboard and coffee. I look for projects where I can learn, contribute, and leave a mark—without pretension or empty promises. If I don’t know something, I dig into it. And if something motivates me, I won’t stop until I get it right.</p>
                         </figcaption>
                     </figure>
                 </section>
                 <section>
-                    <h3>Idiomas</h3>
+                    <h3>Languages</h3>
                     <ul id="languages">
-                        <li>Catalán
+                        <li>Catalan
                             <svg class="icons-color-1" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
-                        <li>Español
+                        <li>Spanish
                             <svg class="icons-color-1" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
-                        <li>Inglés
+                        <li>English
                             <svg class="icons-color-1" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#medium-lang"></use>
                             </svg>
@@ -257,11 +257,11 @@
                     </ul>
                 </section>
                 <section>
-                    <h3>Contacto</h3>
+                    <h3>Contact</h3>
                     <ol id="contact">
                         <li>
                             <address>
-                                <a href="mailto:dev@sandokan.cat" aria-label="Enviar E-mail:"><strong>dev@sandokan.cat</strong></a>
+                                <a href="mailto:dev@sandokan.cat" aria-label="Send an E-mail:"><strong>dev@sandokan.cat</strong></a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="25" height="25" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#email"></use>
@@ -269,7 +269,7 @@
                         </li>
                         <li>
                             <address>
-                                <a href="tel:+34631306583" aria-label="Enviar WhatsApp o llamar:">+34 631306583</a>
+                                <a href="tel:+34631306583" aria-label="Send a WhatsApp or call:">+34 631306583</a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#whatsapp"></use>
@@ -277,7 +277,7 @@
                         </li>
                         <li>
                             <address>
-                                <a href="https://linkedin.com/in/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Visitar perfil de Linkedin:">https://linkedin.com/in/sandokanCat</a>
+                                <a href="https://linkedin.com/in/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Visit Linkedin profile:">https://linkedin.com/in/sandokanCat</a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#linkedin"></use>
@@ -294,52 +294,52 @@
             </div>
             <div id="right-panel">
                 <section>
-                    <h4>Estudios</h4>
+                    <h4>Studies</h4>
                     <article>
-                        <h5><strong>Desarrollo de aplicaciones con tecnologias Web</strong> <span>(cursando)</span></h5>
+                        <h5><strong>Application development with web technologies</strong> <span>(studying)</span></h5>
                         <h6>Institució Pau Casals</h6>
                         <ol>
                             <li><abbr title="JavaScript Object Notation">JSON</abbr> y <abbr title="Asynchronous JavaScript and XML">AJAX</abbr></li>
-                            <li>Java y <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(próximamente)</span></li>
+                            <li>Java y <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(soon)</span></li>
                         </ol>
                     </article>
                     <article>
-                        <h5>Confección y publicación de páginas web</h5>
+                        <h5>Creation and publication of web pages</h5>
                         <h6>ADAMS Formación</h6>
                         <ol>
                             <li>
                                 <abbr title="Hypertext Markup Language">HTML5</abbr> y <abbr title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf"><abbr title="JavaScript">JS</abbr> Vanilla y publicación web</a>
+                                <a class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf"><abbr title="JavaScript">JS</abbr> Vanilla and web publication</a>
                             </li>
                             <li>
-                                <a class="modal-link" href="doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-FC_gonzalo.pdf">Formación complementaria</a>
+                                <a class="modal-link" href="doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-FC_gonzalo.pdf">Additional training</a>
                             </li>
                         </ol>
                     </article>
                     <article id="carousel">
-                        <h6>Otros certificados</h6>
+                        <h6>Other certificates</h6>
                         <!-- CAROUSEL -->
                         <noscript> <!-- FALLBACK -->
                             <ol id="carousel-fallback" class="carousel-track">
                                 <li>
-                                    <img src="img/carousel/FRONT-END_certificate@3x.png" alt="Certificado de Front-End">
+                                    <img src="img/carousel/FRONT-END_certificate@3x.png" alt="Front-End certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/WEB-DEV_certificate@3x.png" alt="Certificado de Desarrollo Web">
+                                    <img src="img/carousel/WEB-DEV_certificate@3x.png" alt="Web development certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/HTML_certificate@3x.png" alt="Certificado de HTML">
+                                    <img src="img/carousel/HTML_certificate@3x.png" alt="HTML certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/CSS_certificate@3x.png" alt="Certificado de CSS">
+                                    <img src="img/carousel/CSS_certificate@3x.png" alt="CSS certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/JS_certificate@3x.png" alt="Certificado de JavaScript">
+                                    <img src="img/carousel/JS_certificate@3x.png" alt="JavaScript certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/JS-2_certificate@3x.png" alt="Certificado de JavaScript intermedio">
+                                    <img src="img/carousel/JS-2_certificate@3x.png" alt="JavaScript medium level certificate">
                                 </li>
                             </ol>
                         </noscript>
@@ -347,13 +347,13 @@
                             <div class="carousel-imgs">
                                 <ol class="carousel-track" aria-live="polite"></ol>
                             </div>
-                            <aside class="carousel-control" aria-label="Controles del carrusel">
-                                <button class="carousel-back" aria-label="Retroceder">
+                            <aside class="carousel-control" aria-label="Carousel controls">
+                                <button class="carousel-back" aria-label="Back">
                                     <svg class="icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                         <use href="img/sprite.svg#arrow-left"></use>
                                     </svg>
                                 </button>
-                                <button class="carousel-advance" aria-label="Avanzar">
+                                <button class="carousel-advance" aria-label="Advance">
                                     <svg class="icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                         <use href="img/sprite.svg#arrow-right"></use>
                                     </svg>
@@ -367,7 +367,7 @@
                         <h6>Universidad Nacional de Educación a Distancia</h6>
                         <ol>
                             <li>
-                                <a class="modal-link" href="doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="doc/accesoUNED_gonzalo.pdf">Acceso a la universidad</a>
+                                <a class="modal-link" href="doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="doc/accesoUNED_gonzalo.pdf">Access to university</a>
                             </li>
                         </ol>
                     </article>
@@ -375,25 +375,25 @@
                         <h6>IES Joan Coromines</h6>
                         <ol>
                             <li>
-                                <a class="modal-link" href="doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="doc/certificatESO_gonzalo.pdf">Certificado en <abbr title="Educación Secundaria Obligatoria">ESO</abbr></a>
+                                <a class="modal-link" href="doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="doc/certificatESO_gonzalo.pdf"><abbr title="Educación Secundaria Obligatoria">ESO</abbr> Certificate</a>
                             </li>
                         </ol>
                     </article>
                 </section>
                 <section>
-                    <h4>Experiencia laboral</h4>
+                    <h4>Work experience</h4>
                     <article>
-                        <h5>Relaciones públicas</h5>
+                        <h5>Public relations</h5>
                         <h6>Sunlife</h6>
                         <ol>
-                            <li>Coordinador de equipo</li>
+                            <li>Team Coordinator</li>
                         </ol>
                     </article>
                     <article>
-                        <h5>Voluntario</h5>
+                        <h5>Volunteer</h5>
                         <h6>Banco de Alimentos</h6>
                         <ol>
-                            <li>Clasificación y empaquetado</li>
+                            <li>Sorting and packaging</li>
                         </ol>
                     </article>
                 </section>
@@ -401,8 +401,8 @@
             <div id="bottom-container">
                 <section>
                     <div class="others">
-                        <h4>Otros datos</h4>
-                        <a class="other-links" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descargar CV pdf">
+                        <h4>Other data</h4>
+                        <a class="other-links" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Download CV pdf">
                             <svg class="icons-color-2 icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#pdf"></use>
                             </svg>
@@ -410,8 +410,8 @@
                     </div>
                     <div id="other-data">
                         <ol>
-                            <li>Permiso de conducir B y vehículo propio</li>
-                            <li>Disponibilidad total dentro de la provincia de Barcelona</li>
+                            <li>Driving license B and own vehicle</li>
+                            <li>Full availability within the province of Barcelona</li>
                         </ol>
                         <p id="random-phrases" aria-live="polite"></p>
                     </div>
@@ -422,17 +422,17 @@
                         <!-- DROPDOWN MENU -->
                         <noscript> <!-- FALLBACK -->
                             <aside id="menu-fallback">
-                                <ul aria-label="Menú de repositorios">
+                                <ul aria-label="Repository menu">
                                     <li>
-                                        <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
-                                            <svg class="icons-color-2 icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
+                                        <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Github">
+                                            <svg class="icons-color-2 icons-scale" role="img" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
-                                            <svg class="icons-color-2 icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                        <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Vercel">
+                                            <svg class="icons-color-2 icons-scale" role="img" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
@@ -443,7 +443,7 @@
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
                             <ul id="burger-links">
                                 <li id="burger-btn">
-                                    <button aria-label="Menú de repositorios" aria-expanded="false">
+                                    <button aria-label="Repository menu" aria-expanded="false">
                                         <span id="burger-icon" class="icons-scale">
                                             <span id="burger-icon-top"></span>
                                             <span id="burger-icon-middle"></span>
@@ -487,8 +487,8 @@
         <!-- COOKIES BLOCK -->
         <footer id="cookies-bar" style="display: block;">
             <p>
-                🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad, <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas).
-                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies"> ¿Qué es una cookie? </a>
+                🍪🐱 <strong>sandokan.cat</strong> respect your privacy. <em>We do not track</em>, only measure anonymous visits — (if you agree).
+                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continue</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies">What is a cookie?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
@@ -497,10 +497,10 @@
     <div id="modal-container" role="dialog" aria-hidden="true" tabindex="-1">
         <div id="modal-content">
             <div id="modal-iframe-wrapper">
-                <iframe id="modal-iframe" src="#" aria-label="Certificado oficial"></iframe>
+                <iframe id="modal-iframe" src="#" aria-label="Official certificate"></iframe>
             </div>
             <div id="modal-img-wrapper"></div>
-            <button id="modal-close" class="icons-color-1" aria-label="Cerrar">
+            <button id="modal-close" class="icons-color-1" aria-label="Close">
                 <svg class="icons-scale" aria-hidden="true" width="50" height="50" preserveAspectRatio="xMinYMin meet">
                     <use href="img/sprite.svg#close"></use>
                 </svg>
