--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es-ES" dir="ltr" data-theme="light">
+<html lang="en-GB" dir="ltr" data-theme="light">
 
 <head>
     <!-- CHARSET FOR UTF-8 ENCODING -->
