--- a/fallbacks/index.es.html
+++ b/fallbacks/index.es.html
@@ -15,6 +15,12 @@
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
 
+    <!-- LANGUAGE VERSIONS -->
+    <link rel="alternate" hreflang="en-GB" href="https://sandokan.cat/">
+    <link rel="alternate" hreflang="es-ES" href="https://sandokan.cat/fallbacks/index.es.html">
+    <link rel="alternate" hreflang="ca-ES" href="https://sandokan.cat/fallbacks/index.ca.html">
+    <link rel="alternate" hreflang="x-default" href="https://sandokan.cat/">
+
     <!-- KEYWORDS FOR SEARCH ENGINES (LOW IMPACT) -->
     <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Front-End Developer, Curriculum Vitae">
 
