--- a/fallbacks/index.es.html
+++ b/fallbacks/index.es.html
@@ -10,7 +10,7 @@
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
     <title>Gonzalo Cabezas - CV</title>
-    <meta name="description" content="Looking for a Front-end? Need a website?">
+    <meta name="description" content="Desarrollador Frontend especializado en tecnologías web modernas. Portfolio y CV">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
@@ -21,8 +21,8 @@
     <link rel="alternate" hreflang="ca-ES" href="https://sandokan.cat/fallbacks/index.ca.html">
     <link rel="alternate" hreflang="x-default" href="https://sandokan.cat/">
 
-    <!-- KEYWORDS FOR SEARCH ENGINES (LOW IMPACT) -->
-    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Front-End Developer, Curriculum Vitae">
+    <!-- KEYWORDS FOR SEARCH ENGINES -->
+    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Desarrollador Front-End, Curriculum Vitae">
 
     <!-- ROBOTS & INDEXING -->
     <meta name="robots" content="index, follow">
@@ -32,23 +32,23 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="sandokan.cat">
     <meta property="og:title" content="Gonzalo Cabezas - CV">
-    <meta property="og:description" content="Looking for a Front-end? Need a website?">
-    <meta property="og:url" content="https://sandokan.cat/?version=1">
-    <meta property="og:image" content="https://sandokan.cat/img/og-img.jpg?version=1">
+    <meta property="og:description" content="¿Buscas un desarrollador Frontend? ¿Necesitas una web?">
+    <meta property="og:url" content="https://sandokan.cat/?version=2.0">
+    <meta property="og:image" content="https://sandokan.cat/img/og-img.jpg?version=2.0">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
     <meta property="og:image:alt" content="Gonzalo Cabezas, Curriculum Vitae">
     <meta property="og:locale" content="es_ES">
-    <meta property="og:article:section" content="Technology, Web Development">
-    <meta property="og:article:tag" content="Frontend Developer">
+    <meta property="og:article:section" content="Tecnología, Desarrollo Web">
+    <meta property="og:article:tag" content="Desarrollador Frontend">
 
     <!-- OPTIONAL OG PROFILE INFO -->
     <meta property="og:profile:first_name" content="Gonzalo">
     <meta property="og:profile:last_name" content="Cabezas">
     <meta property="og:profile:gender" content="male">
     <meta property="og:profile:username" content="sandokanCat">
-    <meta property="og:profile:picture" content="https://sandokan.cat/img/foto_gonzalo.png">
+    <meta property="og:profile:picture" content="https://sandokan.cat/img/photos/gonzalo@3x.png">
 
     <!-- FAVICON -->
     <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
@@ -70,11 +70,11 @@
     <meta name="reply-to" content="dev@sandokan.cat">
     <meta name="copyright" content="© 2025 sandokan.cat">
     <meta name="subject" content="Gonzalo Cabezas, Curriculum Vitae">
-    <meta name="abstract" content="I'm a Frontend developer looking for a job in Barcelona">
+    <meta name="abstract" content="Soy un Desarrollador Frontend buscando trabajo en Barcelona">
     <meta name="identifier-URL" content="https://sandokan.cat/">
 
     <!-- CONTENT CLASSIFICATION -->
-    <meta name="category" content="Technology, Web Development">
+    <meta name="category" content="Tecnología, Desarrollo Web">
     <meta name="rating" content="general">
 
     <!-- HUMANS TXT (CREDITS FILE) -->
@@ -99,9 +99,9 @@
             "@context": "https://schema.org",
             "@type": "Person",
             "name": "Gonzalo Cabezas Núñez",
-            "jobTitle": "Front-End Developer",
+            "jobTitle": "Desarrollador Frontend",
             "url": "https://sandokan.cat/",
-            "description": "Looking for a Front-end? Need a website?",
+            "description": "Desarrollador Frontend especializado en tecnologías web modernas. Portfolio y CV",
             "image": "https://sandokan.cat/img/og-img.jpg?version=1",
             "sameAs": [
                 "https://linkedin.com/in/sandokanCat",
@@ -114,7 +114,7 @@
                 "@type": "ContactPoint",
                 "email": "dev@sandokan.cat",
                 "telephone": "+34 631306583",
-                "contactType": "Web Development Services"
+                "contactType": "Servicios de Desarrollo Web"
             },
             "knowsAbout": [
                 "HTML5",
@@ -159,7 +159,7 @@
             <noscript>
                 <div id="noscript-warning">
                     <h3>🚨 ¡Ups! ¡Ha llegado un enamorado de la ciberseguridad! <em>#NoJS = 😿</em></h3>
-                    <p><strong>Esta web es 100% JavaScript Vanilla</strong>, pero he habilitado todos los contenidos para que puedas verlos.</p>
+                    <p><strong>Esta web es 100% JavaScript Vanilla</strong>, pero he adaptado todo el contenido para que puedas verlo.</p>
                 </div>
             </noscript>
             <!--//NOSCRIPT END -->
@@ -256,7 +256,7 @@
                             </svg>
                         </li>
                         <li>Inglés
-                            <svg class="icons-color-1" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" role="img" aria-label="Nivel medio" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#medium-lang"></use>
                             </svg>
                         </li>
