--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
     <title>Gonzalo Cabezas - CV</title>
-    <meta name="description" content="Looking for a Front-end? Need a website?">
+    <meta name="description" content="Frontend Developer specialized in modern web technologies. Portfolio and CV">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
@@ -21,7 +21,7 @@
     <link rel="alternate" hreflang="ca-ES" href="https://sandokan.cat/fallbacks/index.ca.html">
     <link rel="alternate" hreflang="x-default" href="https://sandokan.cat/">
 
-    <!-- KEYWORDS FOR SEARCH ENGINES (LOW IMPACT) -->
+    <!-- KEYWORDS FOR SEARCH ENGINES -->
     <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Front-End Developer, Curriculum Vitae">
 
     <!-- ROBOTS & INDEXING -->
@@ -33,8 +33,8 @@
     <meta property="og:site_name" content="sandokan.cat">
     <meta property="og:title" content="Gonzalo Cabezas - CV">
     <meta property="og:description" content="Looking for a Front-end? Need a website?">
-    <meta property="og:url" content="https://sandokan.cat/?version=1">
-    <meta property="og:image" content="https://sandokan.cat/img/og-img.jpg?version=1">
+    <meta property="og:url" content="https://sandokan.cat/?version=2.0">
+    <meta property="og:image" content="https://sandokan.cat/img/og-img.jpg?version=2.0">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
@@ -48,7 +48,7 @@
     <meta property="og:profile:last_name" content="Cabezas">
     <meta property="og:profile:gender" content="male">
     <meta property="og:profile:username" content="sandokanCat">
-    <meta property="og:profile:picture" content="https://sandokan.cat/img/foto_gonzalo.png">
+    <meta property="og:profile:picture" content="https://sandokan.cat/img/photos/gonzalo@3x.png">
 
     <!-- FAVICON -->
     <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
@@ -70,7 +70,7 @@
     <meta name="reply-to" content="dev@sandokan.cat">
     <meta name="copyright" content="© 2025 sandokan.cat">
     <meta name="subject" content="Gonzalo Cabezas, Curriculum Vitae">
-    <meta name="abstract" content="I'm a Frontend developer looking for a job in Barcelona">
+    <meta name="abstract" content="I'm a Frontend Developer looking for a job in Barcelona">
     <meta name="identifier-URL" content="https://sandokan.cat/">
 
     <!-- CONTENT CLASSIFICATION -->
@@ -101,7 +101,7 @@
             "name": "Gonzalo Cabezas Núñez",
             "jobTitle": "Front-End Developer",
             "url": "https://sandokan.cat/",
-            "description": "Looking for a Front-end? Need a website?",
+            "description": "Frontend Developer specialized in modern web technologies. Portfolio and CV",
             "image": "https://sandokan.cat/img/og-img.jpg?version=1",
             "sameAs": [
                 "https://linkedin.com/in/sandokanCat",
@@ -158,8 +158,8 @@
             <!-- NOSCRIPT WARNING -->
             <noscript>
                 <div id="noscript-warning">
-                    <h3>🚨 ¡Ups! ¡Ha llegado un enamorado de la ciberseguridad! <em>#NoJS = 😿</em></h3>
-                    <p><strong>Esta web es 100% JavaScript Vanilla</strong>, pero he habilitado todos los contenidos para que puedas verlos.</p>
+                    <h3>🚨 Oops! A cybersecurity enthusiast has arrived! <em>#NoJS = 😿</em></h3>
+                    <p><strong>This website is 100% Vanilla JavaScript</strong>, but I've adapted all the content so you can view it.</p>
                 </div>
             </noscript>
             <!--//NOSCRIPT END -->
@@ -246,17 +246,17 @@
                     <h3>Languages</h3>
                     <ul id="languages">
                         <li>Catalan
-                            <svg class="icons-color-1" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" role="img" aria-label="Native level" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
                         <li>Spanish
-                            <svg class="icons-color-1" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" role="img" aria-label="Native level" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
                         <li>English
-                            <svg class="icons-color-1" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" role="img" aria-label="Intermediate level" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#medium-lang"></use>
                             </svg>
                         </li>
@@ -345,7 +345,7 @@
                                     <img src="img/carousel/JS_certificate@3x.png" alt="JavaScript certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/JS-2_certificate@3x.png" alt="JavaScript medium level certificate">
+                                    <img src="img/carousel/JS-2_certificate@3x.png" alt="JavaScript intermediate level certificate">
                                 </li>
                             </ol>
                         </noscript>
