--- a/fallbacks/index.es.html
+++ b/fallbacks/index.es.html
@@ -102,7 +102,7 @@
             "jobTitle": "Desarrollador Frontend",
             "url": "https://sandokan.cat/",
             "description": "Desarrollador Frontend especializado en tecnologías web modernas. Portfolio y CV",
-            "image": "https://sandokan.cat/img/og-img.jpg?version=1",
+            "image": "https://sandokan.cat/img/og-img.jpg?version=2.0",
             "sameAs": [
                 "https://linkedin.com/in/sandokanCat",
                 "https://github.com/sandokanCat",
@@ -430,15 +430,15 @@
                             <aside id="menu-fallback">
                                 <ul aria-label="Menú de repositorios">
                                     <li>
-                                        <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
-                                            <svg class="icons-color-2 icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
+                                        <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Github">
+                                            <svg class="icons-color-2 icons-scale" role="img" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
-                                            <svg class="icons-color-2 icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                        <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Vercel">
+                                            <svg class="icons-color-2 icons-scale" role="img" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
@@ -449,7 +449,7 @@
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
                             <ul id="burger-links">
                                 <li id="burger-btn">
-                                    <button aria-label="Menú de repositorios" aria-expanded="false">
+                                    <button aria-label="Abrir menú" aria-expanded="false">
                                         <span id="burger-icon" class="icons-scale">
                                             <span id="burger-icon-top"></span>
                                             <span id="burger-icon-middle"></span>
@@ -494,7 +494,7 @@
         <footer id="cookies-bar" style="display: block;">
             <p>
                 🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad, <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas).
-                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies"> ¿Qué es una cookie? </a>
+                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies">¿Qué es una cookie?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
