--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             "jobTitle": "Front-End Developer",
             "url": "https://sandokan.cat/",
             "description": "Frontend Developer specialized in modern web technologies. Portfolio and CV",
-            "image": "https://sandokan.cat/img/og-img.jpg?version=1",
+            "image": "https://sandokan.cat/img/og-img.jpg?version=2.0",
             "sameAs": [
                 "https://linkedin.com/in/sandokanCat",
                 "https://github.com/sandokanCat",
@@ -449,7 +449,7 @@
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
                             <ul id="burger-links">
                                 <li id="burger-btn">
-                                    <button aria-label="Repository menu" aria-expanded="false">
+                                    <button aria-label="Open menu" aria-expanded="false">
                                         <span id="burger-icon" class="icons-scale">
                                             <span id="burger-icon-top"></span>
                                             <span id="burger-icon-middle"></span>
