--- a/fallbacks/index.es.html
+++ b/fallbacks/index.es.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
-    <title>Gonzalo Cabezas - CV</title>
-    <meta name="description" content="Desarrollador Frontend especializado en tecnologías web modernas. Portfolio y CV">
+    <title>Gonzalo Cabezas | Desarrollador Frontend Web</title>
+    <meta name="description" content="Portfolio y CV de Gonzalo Cabezas, Desarrollador Frontend Web especializado en tecnologías Web modernas">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
@@ -22,7 +22,7 @@
     <link rel="alternate" hreflang="x-default" href="https://sandokan.cat/">
 
     <!-- KEYWORDS FOR SEARCH ENGINES -->
-    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Desarrollador Front-End, Curriculum Vitae">
+    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Desarrollador Front-End Web, Desarrollador Frontend Web, Desarrollador Web Barcelona, Desarrollador Web Junior, Portfolio Web, Curriculum Vitae">
 
     <!-- ROBOTS & INDEXING -->
     <meta name="robots" content="index, follow">
@@ -31,14 +31,14 @@
     <!-- OPEN GRAPH FOR SOCIAL MEDIA -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="sandokan.cat">
-    <meta property="og:title" content="Gonzalo Cabezas - CV">
-    <meta property="og:description" content="¿Buscas un desarrollador Frontend? ¿Necesitas una web?">
+    <meta property="og:title" content="Gonzalo Cabezas | Desarrollador Frontend Web">
+    <meta property="og:description" content="¿Buscas un desarrollador Frontend Web creativo y eficiente? Descubre mis proyectos">
     <meta property="og:url" content="https://sandokan.cat/?version=2.0">
     <meta property="og:image" content="https://sandokan.cat/img/og-img.jpg?version=2.0">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
-    <meta property="og:image:alt" content="Gonzalo Cabezas, Curriculum Vitae">
+    <meta property="og:image:alt" content="Gonzalo Cabezas | Desarrolador Frontend Web, CV y Portfolio">
     <meta property="og:locale" content="es_ES">
     <meta property="og:article:section" content="Tecnología, Desarrollo Web">
     <meta property="og:article:tag" content="Desarrollador Frontend">
@@ -70,7 +70,7 @@
     <meta name="reply-to" content="dev@sandokan.cat">
     <meta name="copyright" content="© 2025 sandokan.cat">
     <meta name="subject" content="Gonzalo Cabezas, Curriculum Vitae">
-    <meta name="abstract" content="Soy un Desarrollador Frontend buscando trabajo en Barcelona">
+    <meta name="abstract" content="Desarrollador Frontend Web abierto a oportunidades en Barcelona">
     <meta name="identifier-URL" content="https://sandokan.cat/">
 
     <!-- CONTENT CLASSIFICATION -->
