--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
-    <title>Gonzalo Cabezas - CV</title>
-    <meta name="description" content="Frontend Developer specialized in modern web technologies. Portfolio and CV">
+    <title>Gonzalo Cabezas | Web Frontend Developer</title>
+    <meta name="description" content="Portfolio and resume of Gonzalo Cabezas, a Web Frontend Developer specialized in modern Web technologies">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
@@ -22,7 +22,7 @@
     <link rel="alternate" hreflang="x-default" href="https://sandokan.cat/">
 
     <!-- KEYWORDS FOR SEARCH ENGINES -->
-    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Front-End Developer, Curriculum Vitae">
+    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Web Front-End Developer, Web Frontend Developer, Barcelona Web Developer, Junior Frontend Developer, Web Portfolio, Curriculum Vitae">
 
     <!-- ROBOTS & INDEXING -->
     <meta name="robots" content="index, follow">
@@ -31,15 +31,15 @@
     <!-- OPEN GRAPH FOR SOCIAL MEDIA -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="sandokan.cat">
-    <meta property="og:title" content="Gonzalo Cabezas - CV">
-    <meta property="og:description" content="Looking for a Front-end? Need a website?">
+    <meta property="og:title" content="Gonzalo Cabezas | Web Frontend Developer">
+    <meta property="og:description" content="Looking for a creative and efficient Web Frontend Developer? Discover my projects">
     <meta property="og:url" content="https://sandokan.cat/?version=2.0">
     <meta property="og:image" content="https://sandokan.cat/img/og-img.jpg?version=2.0">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
-    <meta property="og:image:alt" content="Gonzalo Cabezas, Curriculum Vitae">
-    <meta property="og:locale" content="es_ES">
+    <meta property="og:image:alt" content="Gonzalo Cabezas | Web Frontend Developer, resume and Portfolio">
+    <meta property="og:locale" content="en_GB">
     <meta property="og:article:section" content="Technology, Web Development">
     <meta property="og:article:tag" content="Frontend Developer">
 
@@ -70,7 +70,7 @@
     <meta name="reply-to" content="dev@sandokan.cat">
     <meta name="copyright" content="© 2025 sandokan.cat">
     <meta name="subject" content="Gonzalo Cabezas, Curriculum Vitae">
-    <meta name="abstract" content="I'm a Frontend Developer looking for a job in Barcelona">
+    <meta name="abstract" content="Web Frontend Developer open to opportunities in Barcelona">
     <meta name="identifier-URL" content="https://sandokan.cat/">
 
     <!-- CONTENT CLASSIFICATION -->
@@ -101,7 +101,7 @@
             "name": "Gonzalo Cabezas Núñez",
             "jobTitle": "Front-End Developer",
             "url": "https://sandokan.cat/",
-            "description": "Frontend Developer specialized in modern web technologies. Portfolio and CV",
+            "description": "Web Frontend Developer specialized in modern web technologies. Portfolio and resume",
             "image": "https://sandokan.cat/img/og-img.jpg?version=2.0",
             "sameAs": [
                 "https://linkedin.com/in/sandokanCat",
