--- a/fallbacks/index.es.html
+++ b/fallbacks/index.es.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
-    <title>Gonzalo Cabezas | Desarrollador Frontend Web</title>
-    <meta name="description" content="Portfolio y CV de Gonzalo Cabezas, Desarrollador Frontend Web especializado en tecnologías Web modernas">
+    <title>Gonzalo Cabezas | Desarrollador Frontend web</title>
+    <meta name="description" content="Portfolio y CV de Gonzalo Cabezas, desarrollador Frontend especializado en tecnologías web modernas">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
@@ -22,7 +22,7 @@
     <link rel="alternate" hreflang="x-default" href="https://sandokan.cat/">
 
     <!-- KEYWORDS FOR SEARCH ENGINES -->
-    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Desarrollador Front-End Web, Desarrollador Frontend Web, Desarrollador Web Barcelona, Desarrollador Web Junior, Portfolio Web, Curriculum Vitae">
+    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend dev, Desarrollador Front-End web, Desarrollador Frontend web, Desarrollador web Barcelona, Desarrollador web junior, Portfolio web, Curriculum Vitae">
 
     <!-- ROBOTS & INDEXING -->
     <meta name="robots" content="index, follow">
@@ -31,16 +31,16 @@
     <!-- OPEN GRAPH FOR SOCIAL MEDIA -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="sandokan.cat">
-    <meta property="og:title" content="Gonzalo Cabezas | Desarrollador Frontend Web">
-    <meta property="og:description" content="¿Buscas un desarrollador Frontend Web creativo y eficiente? Descubre mis proyectos">
+    <meta property="og:title" content="Gonzalo Cabezas | Desarrollador Frontend web">
+    <meta property="og:description" content="¿Buscas un desarrollador Frontend creativo y eficiente? Descubre mis proyectos">
     <meta property="og:url" content="https://sandokan.cat/?version=2.0">
     <meta property="og:image" content="https://sandokan.cat/img/og-img.jpg?version=2.0">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
-    <meta property="og:image:alt" content="Gonzalo Cabezas | Desarrolador Frontend Web, CV y Portfolio">
+    <meta property="og:image:alt" content="Gonzalo Cabezas | Desarrollador Frontend web, CV y Portfolio">
     <meta property="og:locale" content="es_ES">
-    <meta property="og:article:section" content="Tecnología, Desarrollo Web">
+    <meta property="og:article:section" content="Tecnología, desarrollo web">
     <meta property="og:article:tag" content="Desarrollador Frontend">
 
     <!-- OPTIONAL OG PROFILE INFO -->
@@ -70,11 +70,11 @@
     <meta name="reply-to" content="dev@sandokan.cat">
     <meta name="copyright" content="© 2025 sandokan.cat">
     <meta name="subject" content="Gonzalo Cabezas, Curriculum Vitae">
-    <meta name="abstract" content="Desarrollador Frontend Web abierto a oportunidades en Barcelona">
+    <meta name="abstract" content="Desarrollador Frontend web abierto a oportunidades en Barcelona">
     <meta name="identifier-URL" content="https://sandokan.cat/">
 
     <!-- CONTENT CLASSIFICATION -->
-    <meta name="category" content="Tecnología, Desarrollo Web">
+    <meta name="category" content="Tecnología, desarrollo web">
     <meta name="rating" content="general">
 
     <!-- HUMANS TXT (CREDITS FILE) -->
@@ -99,7 +99,7 @@
             "@context": "https://schema.org",
             "@type": "Person",
             "name": "Gonzalo Cabezas Núñez",
-            "jobTitle": "Desarrollador Frontend",
+            "jobTitle": "Desarrollador Frontend Web",
             "url": "https://sandokan.cat/",
             "description": "Desarrollador Frontend especializado en tecnologías web modernas. Portfolio y CV",
             "image": "https://sandokan.cat/img/og-img.jpg?version=2.0",
@@ -114,7 +114,7 @@
                 "@type": "ContactPoint",
                 "email": "dev@sandokan.cat",
                 "telephone": "+34 631306583",
-                "contactType": "Servicios de Desarrollo Web"
+                "contactType": "Servicios de desarrollo web"
             },
             "knowsAbout": [
                 "HTML5",
@@ -159,7 +159,7 @@
             <noscript>
                 <div id="noscript-warning">
                     <h3>🚨 ¡Ups! ¡Ha llegado un enamorado de la ciberseguridad! <em>#NoJS = 😿</em></h3>
-                    <p><strong>Esta web es 100% JavaScript Vanilla</strong>, pero he adaptado todo el contenido para que puedas verlo.</p>
+                    <p><strong>Esta web es 100% JavaScript Vanilla</strong>, pero he adaptado todo el contenido para que puedas verlo</p>
                 </div>
             </noscript>
             <!--//NOSCRIPT END -->
@@ -168,11 +168,11 @@
                 <noscript>
                     <ul>
                         <li> <!-- DARK MODE -->
-                            <a class="dark-mode-btn icons-scale" aria-label="Alternar Modo oscuro" href="fallbacks/index.es-dark.html">🌙</a>
+                            <a class="dark-mode-btn icons-scale" aria-label="Alternar modo oscuro" href="fallbacks/index.es-dark.html">🌙</a>
                         </li>
                         <!-- LANG MENU -->
                         <li>
-                            <a data-lang="ca" aria-label="Català" href="fallbacks/index.ca.html">
+                            <a data-lang="ca" aria-label="Catalán" href="fallbacks/index.ca.html">
                                 <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="img/sprite.svg#cat-flag"></use>
                                 </svg>
@@ -186,7 +186,7 @@
                             </a>
                         </li>
                         <li>
-                            <a data-lang="en" aria-label="English" href="index.html">
+                            <a data-lang="en" aria-label="Inglés" href="index.html">
                                 <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="img/sprite.svg#uk-flag"></use>
                                 </svg>
@@ -202,7 +202,7 @@
                     </li>
                     <!-- LANG MENU -->
                     <li>
-                        <button class="icons-scale" id="lang-toggle" data-lang="ca" aria-label="Català">
+                        <button class="icons-scale" id="lang-toggle" data-lang="ca" aria-label="Catalán">
                             <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#cat-flag"></use>
                             </svg>
@@ -216,7 +216,7 @@
                         </button>
                     </li>
                     <li>
-                        <button class="icons-scale" data-lang="en" aria-label="English">
+                        <button class="icons-scale" data-lang="en" aria-label="Inglés">
                             <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#uk-flag"></use>
                             </svg>
@@ -267,7 +267,7 @@
                     <ol id="contact">
                         <li>
                             <address>
-                                <a href="mailto:dev@sandokan.cat" aria-label="Enviar E-mail:"><strong>dev@sandokan.cat</strong></a>
+                                <a href="mailto:dev@sandokan.cat" aria-label="Enviar E-mail"><strong>dev@sandokan.cat</strong></a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="25" height="25" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#email"></use>
@@ -275,7 +275,7 @@
                         </li>
                         <li>
                             <address>
-                                <a href="tel:+34631306583" aria-label="Enviar WhatsApp o llamar:">+34 631306583</a>
+                                <a href="tel:+34631306583" aria-label="Enviar WhatsApp o llamar">+34 631306583</a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#whatsapp"></use>
@@ -283,7 +283,7 @@
                         </li>
                         <li>
                             <address>
-                                <a href="https://linkedin.com/in/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Visitar perfil de Linkedin:">https://linkedin.com/in/sandokanCat</a>
+                                <a href="https://linkedin.com/in/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Visitar perfil de Linkedin">https://linkedin.com/in/sandokanCat</a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#linkedin"></use>
@@ -302,7 +302,7 @@
                 <section>
                     <h4>Estudios</h4>
                     <article>
-                        <h5><strong>Desarrollo de aplicaciones con tecnologias Web</strong> <span>(cursando)</span></h5>
+                        <h5><strong>Desarrollo de aplicaciones con tecnologias web</strong> <span>(cursando)</span></h5>
                         <h6>Institució Pau Casals</h6>
                         <ol>
                             <li><abbr title="JavaScript Object Notation">JSON</abbr> y <abbr title="Asynchronous JavaScript and XML">AJAX</abbr></li>
@@ -333,7 +333,7 @@
                                     <img src="img/carousel/FRONT-END_certificate@3x.png" alt="Certificado de Front-End">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/WEB-DEV_certificate@3x.png" alt="Certificado de Desarrollo Web">
+                                    <img src="img/carousel/WEB-DEV_certificate@3x.png" alt="Certificado de desarrollo Web">
                                 </li>
                                 <li>
                                     <img src="img/carousel/HTML_certificate@3x.png" alt="Certificado de HTML">
@@ -483,8 +483,8 @@
                             </strong>
                         </p>
                         <!--//SIGNATURE END -->
-                        <a href="https://sandokanCat.github.io/estopa/" target="_blank" aria-label="Estopa Fanpage" data-provisional>
-                            <img src="https://sandokancat.github.io/estopa/img/logo_estopa.png" alt="Estopa Fanpage" title="unfinished">
+                        <a href="https://sandokanCat.github.io/estopa/" target="_blank" data-provisional>
+                            <img src="https://sandokancat.github.io/estopa/img/logo_estopa.png" alt="Página de fans de Estopa" title="Inacabado">
                         </a>
                     </div>
                 </section>
@@ -493,7 +493,7 @@
         <!-- COOKIES BLOCK -->
         <footer id="cookies-bar" style="display: block;">
             <p>
-                🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad, <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas).
+                🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad. <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas).
                 <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies">¿Qué es una cookie?</a>
             </p>
         </footer>
