--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
-    <title>Gonzalo Cabezas | Web Frontend Developer</title>
-    <meta name="description" content="Portfolio and resume of Gonzalo Cabezas, a Web Frontend Developer specialized in modern Web technologies">
+    <title>Gonzalo Cabezas | Web Frontend developer</title>
+    <meta name="description" content="Portfolio and resume of Gonzalo Cabezas, a Frontend developer specialized in modern web technologies">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
@@ -22,7 +22,7 @@
     <link rel="alternate" hreflang="x-default" href="https://sandokan.cat/">
 
     <!-- KEYWORDS FOR SEARCH ENGINES -->
-    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Web Front-End Developer, Web Frontend Developer, Barcelona Web Developer, Junior Frontend Developer, Web Portfolio, Curriculum Vitae">
+    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend dev, Web Front-End developer, Web Frontend developer, Barcelona web developer, Junior Frontend developer, Web portfolio, Curriculum Vitae">
 
     <!-- ROBOTS & INDEXING -->
     <meta name="robots" content="index, follow">
@@ -32,15 +32,15 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="sandokan.cat">
     <meta property="og:title" content="Gonzalo Cabezas | Web Frontend Developer">
-    <meta property="og:description" content="Looking for a creative and efficient Web Frontend Developer? Discover my projects">
+    <meta property="og:description" content="Looking for a creative and efficient Frontend developer? Discover my projects">
     <meta property="og:url" content="https://sandokan.cat/?version=2.0">
     <meta property="og:image" content="https://sandokan.cat/img/og-img.jpg?version=2.0">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
-    <meta property="og:image:alt" content="Gonzalo Cabezas | Web Frontend Developer, resume and Portfolio">
+    <meta property="og:image:alt" content="Gonzalo Cabezas | Web Frontend developer, resume and portfolio">
     <meta property="og:locale" content="en_GB">
-    <meta property="og:article:section" content="Technology, Web Development">
+    <meta property="og:article:section" content="Technology, web development">
     <meta property="og:article:tag" content="Frontend Developer">
 
     <!-- OPTIONAL OG PROFILE INFO -->
@@ -70,11 +70,11 @@
     <meta name="reply-to" content="dev@sandokan.cat">
     <meta name="copyright" content="© 2025 sandokan.cat">
     <meta name="subject" content="Gonzalo Cabezas, Curriculum Vitae">
-    <meta name="abstract" content="Web Frontend Developer open to opportunities in Barcelona">
+    <meta name="abstract" content="Web Frontend developer open to opportunities in Barcelona">
     <meta name="identifier-URL" content="https://sandokan.cat/">
 
     <!-- CONTENT CLASSIFICATION -->
-    <meta name="category" content="Technology, Web Development">
+    <meta name="category" content="Technology, web development">
     <meta name="rating" content="general">
 
     <!-- HUMANS TXT (CREDITS FILE) -->
@@ -99,9 +99,9 @@
             "@context": "https://schema.org",
             "@type": "Person",
             "name": "Gonzalo Cabezas Núñez",
-            "jobTitle": "Front-End Developer",
+            "jobTitle": "Web Front-End developer",
             "url": "https://sandokan.cat/",
-            "description": "Web Frontend Developer specialized in modern web technologies. Portfolio and resume",
+            "description": "Frontend developer specialized in modern web technologies. Portfolio and resume",
             "image": "https://sandokan.cat/img/og-img.jpg?version=2.0",
             "sameAs": [
                 "https://linkedin.com/in/sandokanCat",
@@ -114,7 +114,7 @@
                 "@type": "ContactPoint",
                 "email": "dev@sandokan.cat",
                 "telephone": "+34 631306583",
-                "contactType": "Web Development Services"
+                "contactType": "Web development services"
             },
             "knowsAbout": [
                 "HTML5",
@@ -159,7 +159,7 @@
             <noscript>
                 <div id="noscript-warning">
                     <h3>🚨 Oops! A cybersecurity enthusiast has arrived! <em>#NoJS = 😿</em></h3>
-                    <p><strong>This website is 100% Vanilla JavaScript</strong>, but I've adapted all the content so you can view it.</p>
+                    <p><strong>This website is 100% Vanilla JavaScript</strong>, but I've adapted all the content so you can view it</p>
                 </div>
             </noscript>
             <!--//NOSCRIPT END -->
@@ -168,18 +168,18 @@
                 <noscript>
                     <ul>
                         <li> <!-- DARK MODE -->
-                            <a class="dark-mode-btn icons-scale" aria-label="Alternar Modo oscuro" href="fallbacks/index.es-dark.html">🌙</a>
+                            <a class="dark-mode-btn icons-scale" aria-label="Toogle dark mode" href="fallbacks/index.es-dark.html">🌙</a>
                         </li>
                         <!-- LANG MENU -->
                         <li>
-                            <a data-lang="ca" aria-label="Català" href="fallbacks/index.ca.html">
+                            <a data-lang="ca" aria-label="Catalan" href="fallbacks/index.ca.html">
                                 <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="img/sprite.svg#cat-flag"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a data-lang="es" aria-label="Español" href="fallbacks/index.es.html">
+                            <a data-lang="es" aria-label="Spanish" href="fallbacks/index.es.html">
                                 <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="img/sprite.svg#es-flag"></use>
                                 </svg>
@@ -198,18 +198,18 @@
                 <!-- JS NAV -->
                 <ul class="js-disabled">
                     <li> <!-- DARK MODE -->
-                        <button id="theme-dark-btn" class="dark-mode-btn icons-scale" aria-label="Alternar modo oscuro">🌓</button> <!-- JS ENABLED -->
+                        <button id="theme-dark-btn" class="dark-mode-btn icons-scale" aria-label="Toogle dark mode">🌓</button> <!-- JS ENABLED -->
                     </li>
                     <!-- LANG MENU -->
                     <li>
-                        <button class="icons-scale" id="lang-toggle" data-lang="ca" aria-label="Català">
+                        <button class="icons-scale" id="lang-toggle" data-lang="ca" aria-label="Catalan">
                             <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#cat-flag"></use>
                             </svg>
                         </button>
                     </li>
                     <li>
-                        <button class="icons-scale" data-lang="es" aria-label="Español">
+                        <button class="icons-scale" data-lang="es" aria-label="Spanish">
                             <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#es-flag"></use>
                             </svg>
@@ -237,7 +237,7 @@
                         </picture>
                         <figcaption>
                             <h1>Gonzalo Cabezas Núñez</h1>
-                            <h2>Frontend Developer transitioning to Fullstack</h2>
+                            <h2>Frontend developer transitioning to Fullstack</h2>
                             <p>I’m obsessed with clean, functional code. I train every day—both through formal courses and self-learning—because learning doesn’t stop when the bell rings. I like breaking things to understand (and fix) them better, which is why Red Teaming strongly appeals to me. I don’t follow the standard path; I prefer carving my own with a keyboard and coffee. I look for projects where I can learn, contribute, and leave a mark—without pretension or empty promises. If I don’t know something, I dig into it. And if something motivates me, I won’t stop until I get it right.</p>
                         </figcaption>
                     </figure>
@@ -267,7 +267,7 @@
                     <ol id="contact">
                         <li>
                             <address>
-                                <a href="mailto:dev@sandokan.cat" aria-label="Send an E-mail:"><strong>dev@sandokan.cat</strong></a>
+                                <a href="mailto:dev@sandokan.cat" aria-label="Send an E-mail"><strong>dev@sandokan.cat</strong></a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="25" height="25" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#email"></use>
@@ -275,7 +275,7 @@
                         </li>
                         <li>
                             <address>
-                                <a href="tel:+34631306583" aria-label="Send a WhatsApp or call:">+34 631306583</a>
+                                <a href="tel:+34631306583" aria-label="Send a WhatsApp or call">+34 631306583</a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#whatsapp"></use>
@@ -283,7 +283,7 @@
                         </li>
                         <li>
                             <address>
-                                <a href="https://linkedin.com/in/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Visit Linkedin profile:">https://linkedin.com/in/sandokanCat</a>
+                                <a href="https://linkedin.com/in/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Visit Linkedin profile">https://linkedin.com/in/sandokanCat</a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#linkedin"></use>
@@ -305,8 +305,8 @@
                         <h5><strong>Application development with web technologies</strong> <span>(studying)</span></h5>
                         <h6>Institució Pau Casals</h6>
                         <ol>
-                            <li><abbr title="JavaScript Object Notation">JSON</abbr> y <abbr title="Asynchronous JavaScript and XML">AJAX</abbr></li>
-                            <li>Java y <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(soon)</span></li>
+                            <li><abbr title="JavaScript Object Notation">JSON</abbr> and <abbr title="Asynchronous JavaScript and XML">AJAX</abbr></li>
+                            <li>Java and <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(soon)</span></li>
                         </ol>
                     </article>
                     <article>
@@ -314,7 +314,7 @@
                         <h6>ADAMS Formación</h6>
                         <ol>
                             <li>
-                                <abbr title="Hypertext Markup Language">HTML5</abbr> y <abbr title="Cascading Style Sheets">CSS3</abbr>
+                                <abbr title="Hypertext Markup Language">HTML5</abbr> and <abbr title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
                                 <a class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf"><abbr title="JavaScript">JS</abbr> Vanilla and web publication</a>
@@ -483,8 +483,8 @@
                             </strong>
                         </p>
                         <!--//SIGNATURE END -->
-                        <a href="https://sandokanCat.github.io/estopa/" target="_blank" aria-label="Estopa Fanpage" data-provisional>
-                            <img src="https://sandokancat.github.io/estopa/img/logo_estopa.png" alt="Estopa Fanpage" title="unfinished">
+                        <a href="https://sandokanCat.github.io/estopa/" target="_blank" data-provisional>
+                            <img src="https://sandokancat.github.io/estopa/img/logo_estopa.png" alt="Estopa Fanpage" title="Unfinished">
                         </a>
                     </div>
                 </section>
