theme & lang fallbacks

--- a/fallbacks/dark/index.ca-dark.html
+++ b/fallbacks/dark/index.ca-dark.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ca-ES" dir="ltr" data-theme="light">
+<html lang="ca-ES" dir="ltr" data-theme="dark">
 
 <head>
     <!-- CHARSET FOR UTF-8 ENCODING -->
@@ -10,15 +10,15 @@
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
     <title>Gonzalo Cabezas | Desenvolupador Frontend Web</title>
-    <meta name="description" content="Portfolio i CV de Gonzalo Cabezas, Desenvolupador Frontend especialitzat en tecnologies web modernes">
+    <meta name="description" content="Portfolio i CV de Gonzalo Cabezas, desenvolupador Frontend especialitzat en tecnologies web modernes">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
 
     <!-- LANGUAGE VERSIONS -->
     <link rel="alternate" hreflang="en-GB" href="https://sandokan.cat/">
-    <link rel="alternate" hreflang="es-ES" href="https://sandokan.cat/fallbacks/index.es.html">
-    <link rel="alternate" hreflang="ca-ES" href="https://sandokan.cat/fallbacks/index.ca.html">
+    <link rel="alternate" hreflang="es-ES" href="https://sandokan.cat/fallbacks/light/index.es.html">
+    <link rel="alternate" hreflang="ca-ES" href="https://sandokan.cat/fallbacks/light/index.ca.html">
     <link rel="alternate" hreflang="x-default" href="https://sandokan.cat/">
 
     <!-- KEYWORDS FOR SEARCH ENGINES -->
