--- a/fallbacks/dark/index.en-dark.html
+++ b/fallbacks/dark/index.en-dark.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB" dir="ltr" data-theme="light">
+<html lang="en-GB" dir="ltr" data-theme="dark">
 
 <head>
     <!-- CHARSET FOR UTF-8 ENCODING -->
