--- a/index.html
+++ b/index.html
@@ -478,8 +478,11 @@
                     <div id="portfolio">
                         <!-- SIGNATURE -->
                         <p id="signature">
-                            <strong id="signature-text">
-                                <noscript>© 2025 sandokan.cat</noscript>
+                            <strong> © 
+                                <span id="signature-year">
+                                    <noscript>2025</noscript>
+                                </span>
+                                sandokan.cat
                             </strong>
                         </p>
                         <!--//SIGNATURE END -->
